# gourd

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  .prettierignore  .travis.yml  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  air.conf  backend.js  codecov.yml  collector-config.yaml  docker-compose-deps.yml  docker-compose-devdeps.yml  docker-compose.yml  example.http  fly.toml  food.code-workspace  full_test.go  go.mod  go.sum  gourd.code-workspace  gqlgen.yml  local-dev.sh  main.go  main.tf  openapi.yaml  package.json  prometheus.yaml  redoc-static.html  redocly.yaml  renovate.json  requests.http  requirements.txt  revive.toml  (+6 more)
.circleci/: config.yml
.github/: codecov.yml  dependabot.yml  renovate.json
api/: .validaterc  api-client.gen.go  api-server.gen.go  api-types.gen.go  api.gen.go  api.go  api_food.go  api_ingredient.go  api_ingredient_test.go  api_meal_photo.go  api_misc.go  api_test.go  api_usage.go  api_usage_test.go  api_util.go  cal.go  latex.go  manager.go  openapi.yaml  testutil_test.go  util.go  util_test.go
app/: app.go  utils.go
auth/: auth.go  auth_test.go
backend/: .gitignore  Gopkg.toml  dev.sh  full_test.go  main.go  main_test.go  test.sh  test_cov.sh
cli/: Cargo.toml  codegen.yml  example.yaml  graphql.schema.json  package.json  query.graphql  query_set.graphql  query_upsert_ingredient.graphql  tsconfig.json
cli/src/: index.ts  ingredient.rs  main.rs  queries.graphql  recipe.rs
common/: common.go
data/: ingredient_fdc_mapping.yaml  make_usda_json_lines.sh
db/: db.go  db_integration_test.go  get.go  migrate.go  photos.go  recipes.go  testutil.go  usda.go
deploy/: Dockerfile.base  fly.toml  ingredient_fdc_mapping.yaml  mapping_schema.json
dev/: air.conf  local-dev.sh  sqlboiler.toml
dockerfiles/: docker-compose-deps.yml  docker-compose-devdeps.yml  docker-compose-gourd.yml  go.Dockerfile  main.Dockerfile  rust.Dockerfile  ui.Dockerfile  wasm.Dockerfile
frontend/: package.json
google/: google.go  photos.go
gphotos/: photos.go
graph/: helpers.go  middleware.go  resolver.go  resolver_integration_test.go  schema.graphql  schema.graphqls  schema.resolvers.go
image/: image.go  image_store.go
manager/: manager.go  types.go  types_test.go
migrations/: 20191110153804_initial-tables.down.sql  20191110153804_initial-tables.up.sql  20200516135546_usda.down.sql  20200516135546_usda.up.sql  20200622201047_meals.down.sql  20200622201047_meals.up.sql  20200830171459_add-notes-sources.down.sql  20200830171459_add-notes-sources.up.sql  20200906172848_add-fdc-id-and-alias-to-to-ingredients.down.sql  20200906172848_add-fdc-id-and-alias-to-to-ingredients.up.sql  20200929221041_add-kv-table.down.sql  20200929221041_add-kv-table.up.sql  20200930171119_add-google_photos_table.down.sql  20200930171119_add-google_photos_table.up.sql  20201016125226_add-blurhash.down.sql  20201220203841_version-recipes.up.sql
models/: boil_main_test.go  boil_queries.go  boil_queries_test.go  boil_suites_test.go  boil_table_names.go  boil_types.go  gphotos_albums.go  gphotos_albums_test.go  gphotos_photos.go  gphotos_photos_test.go  images.go  images_test.go  ingredient_units.go  ingredient_units_test.go  ingredients.go  ingredients_test.go  kv.go  kv_test.go  meal_gphoto.go  meal_gphoto_test.go  meal_recipe.go  meal_recipe_test.go  meals.go  (+81 more)
rust/: .gitignore  Cargo.toml  Dockerfile  fly.toml  requirements.txt
rust/common/: Cargo.toml
rust/common/src/: codec.rs  converter.rs  lib.rs  parser.rs  sample_branded_food.json  usda.rs
rust/common/src/pan/: mod.rs  pan.rs
rust/common/src/unit/: measure.rs  mod.rs  unit.rs
rust/openapi/: Cargo.toml  README.md
rust/openapi/.openapi-generator/: FILES
rust/openapi/src/apis/: configuration.rs  mod.rs
rust/openapi/src/models/: _unused.rs  amount.rs  auth_resp.rs  branded_food.rs  branded_food_item.rs  branded_food_item_label_nutrients.rs  branded_food_item_label_nutrients_calcium.rs  branded_food_item_label_nutrients_calories.rs  branded_food_item_label_nutrients_carbohydrates.rs  branded_food_item_label_nutrients_fat.rs  branded_food_item_label_nutrients_fiber.rs  branded_food_item_label_nutrients_iron.rs  branded_food_item_label_nutrients_potassium.rs  branded_food_item_label_nutrients_protein.rs  branded_food_item_label_nutrients_saturated_fat.rs  branded_food_item_label_nutrients_sugars.rs  branded_food_item_label_nutrients_trans_fat.rs  compact_recipe.rs  compact_recipe_meta.rs  compact_recipe_section.rs  config_data.rs  entity_summary.rs  error.rs  food.rs  food_attribute.rs  food_attribute_food_attribute_type.rs  food_category.rs  food_component.rs  food_data_type.rs  food_info.rs  food_nutrient.rs  food_nutrient_derivation.rs  food_nutrient_source.rs  food_nutrient_unit.rs  food_portion.rs  food_result_by_item.rs  food_search_result.rs  food_update_log.rs  food_wrapper.rs  foundation_food_item.rs  (+66 more)
rust/s/: .env  Cargo.toml  sqlx-data.json
rust/s-configuration/: local.yaml
rust/s/configuration/: local.yaml
rust/s/src/: configuration.rs  lib.rs  main.rs  startup.rs
rust/s/src/db/: mod.rs  recipe_details.rs  recipe_sections.rs  recipes.rs
rust/s/src/foo/: mod.rs
rust/s/src/models/: error.rs  food_category.rs  food_nutrient_unit.rs  google_photo.rs  ingredient_detail.rs  inline_object.rs  inline_response_200.rs  meal.rs  mod.rs  nutrient.rs  paginated_ingredients.rs  paginated_photos.rs  recipe_wrapper.rs  search_result.rs  time_range.rs
rust/s/src/routes/: api.rs  mod.rs  parser.rs
rust/s/src/scraper/: scraper.rs
rust/server/: Cargo.toml
rust/server/src/: configuration.rs  error.rs  lib.rs  main.rs  obs.rs  scraper.rs  search.rs  server.rs  startup.rs  usda_loader.rs  usda_mappings.rs
rust/server/src/routes/: parser.rs
rust/server/src/scraper/: mod.rs  scraper.rs
rust/server/src/search/: index.rs  mod.rs
rust/w/: Cargo.toml
rust/w/pkg/: gourd_rs.d.ts  gourd_rs.js  gourd_rs_bg.js  gourd_rs_bg.wasm  gourd_rs_bg.wasm.d.ts  package.json
rust/w/src/: lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
(+627 files in other folders)
