[package]
name = "ingredient-parser"
version = "0.1.0"
authors = ["nickysemenza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
graphql_client = "0.9.0"
reqwest = "^0.9"
serde_yaml = "0.8"
clap = "2.33.1"