[package]
authors = ["Nicky Semenza <nicky@nickysemenza.com>"]
edition = "2018"
name = "gourd_common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ingredient = {git = "https://github.com/nickysemenza/ingredient-parser", branch = "main"}
openapi = {path = "../openapi"}
anyhow = "1.0"
petgraph = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
tracing = "0.1.28"
serde_yaml = "0.9.13"
[dev-dependencies]
pretty_assertions = "1.3.0"

# [patch."https://github.com/nickysemenza/ingredient-parser"]
# ingredient = { path = "../../../ingredient-parser/ingredient-parser" }