[package]
authors = ["Nicky Semenza <nicky@nickysemenza.com>"]
edition = "2018"
name = "gourd_common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
ingredient = { git = "https://github.com/nickysemenza/ingredient-parser", branch = "main" }
openapi = { path = "../openapi" }
anyhow = "1.0"
tracing = "0.1.37"
[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
[dev-dependencies]
pretty_assertions = "1.4.0"
