[package]
name = "openapi"
version = "1.0.0"
authors = ["n@nickysemenza.com"]
description = "API for https://github.com/nickysemenza/gourd"
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.4.0"
uuid = { version = "^1.4.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
