[package]
name = "gourd"
version = "0.1.0"
edition = "2018"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gourd"

[dependencies]
actix-web = "=4.0.0-beta.13"
actix-http = "=3.0.0-beta.14"
futures = "0.3"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "^1.0"
serde_yaml = "0.8.21"
url = "1.7"
ingredient = {git = "https://github.com/nickysemenza/ingredient-parser", branch = "main"}
actix-web-opentelemetry = "0.11.0-beta.6"
opentelemetry-jaeger = "0.15"
opentelemetry = "0.16.0"
sqlx = { version = "0.5.7", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline","bigdecimal","json"] }
serde-aux = "1.1.0"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
bigdecimal = { version = "0.2.0", features = ["serde"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
tracing-opentelemetry = "0.15.0"
clap = "2.33.3"
rand = "0.8.4"
async-recursion = "0.3.2"
sea-query = {version = "0.16.5", features = ["backend-postgres","sqlx-postgres","with-uuid","with-bigdecimal","with-json","derive"]}
sea-orm = {version= "0.3.2",features = ["with-json","with-uuid","sqlx-dep","sqlx-postgres","debug-print","with-chrono"]}
ormx = {version = "0.10.0", features = ["postgres"]}
gourd_common = {path = "../common"}
openapi = {path = "../openapi"}
anyhow = "1.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize"]

[dev-dependencies]
actix-rt = "2.5.0"
