[package]
edition = "2018"
name = "gourd"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gourd"
path = "src/main.rs"

[dependencies]
actix-http = "=3.0.0-beta.14"
actix-router = "=0.5.0-beta.4"
actix-web = "=4.0.0-beta.13"
actix-web-opentelemetry = "0.11.0-beta.6"
anyhow = "1.0"
clap = "2.34.0"
config = {version = "0.13.0", default-features = false, features = ["yaml"]}
futures = "0.3"
gourd_common = {path = "../common"}
openapi = {path = "../openapi"}
opentelemetry = "0.16.0"
opentelemetry-jaeger = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde-aux = "3.0.1"
serde_derive = "^1.0"
serde_json = "1.0"
tracing = "0.1.28"
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.3.11"
url = "1.7"

[dependencies.pyo3]
features = ["auto-initialize"]
version = "0.16.2"

[dev-dependencies]
actix-rt = "2.7.0"
