[package]
edition = "2018"
name = "gourd"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gourd"
path = "src/main.rs"

[dependencies]
axum = {version = "0.7", features= ["tracing"] }
axum-tracing-opentelemetry = "0.23.0"
anyhow = "1.0"
clap = "4"
config = {version = "0.14.0", default-features = false, features = ["yaml"]}
futures = "0.3"
gourd_common = {path = "../common"}
openapi = {path = "../openapi"}
serde = {version = "1.0", features = ["derive"]}
serde-aux = "4.2.0"
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full","tracing"] }
url = "2.4"
recipe_scraper_fetcher = {git = "https://github.com/nickysemenza/ingredient-parser", branch = "main"}
meilisearch-sdk = "0.27"
strum = "0.26"
strum_macros = "0.26"
itertools = "0.13.0"
indicatif = "0.17.5"
init-tracing-opentelemetry = { version = "0.23.0", features = ["jaeger", "opentelemetry-otlp", "tracing_subscriber_ext"] }
