[package]
name = "gourd_rs"
version = "0.1.0"
authors = ["Nicky Semenza <nicky@nickysemenza.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
gourd_common = {path = "../common"}
openapi = {path = "../openapi"}
getrandom = { version = "0.2.3", features = ["js"] } # https://docs.rs/getrandom/0.2.3/getrandom/#supported-targets
indexmap = "=1.6.2" # https://github.com/tkaitchuck/aHash/issues/95

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

tracing-wasm = "0.2.1"
tracing = "0.1.28"

[dev-dependencies]
wasm-bindgen-test = "0.3.23"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false