[package]
authors = ["Nicky Semenza <nicky@nickysemenza.com>"]
edition = "2018"
name = "gourd_wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = {version = "0.2.10", features = ["js"]}# https://docs.rs/getrandom/0.2.3/getrandom/#supported-targets 
gourd_common = {path = "../common"} 
indexmap = "=2.6.0" # https://github.com/tkaitchuck/aHash/issues/95
openapi = {path = "../openapi"} 
wasm-bindgen = {version = "0.2.87", features = ["serde-serialize"]} 

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.5", optional = true}

tracing = "0.1.37"
tracing-wasm = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
